--- a/assets/estilo/style.css
+++ b/assets/estilo/style.css
@@ -3,7 +3,6 @@
 * {
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
 }
 
 html, body {
@@ -40,4 +39,26 @@ iframe#tela {
     left: 22px;
     height: 472px;
     width: 268px;
+}
+
+
+
+section#midias {
+    text-align: right;
+}
+
+section#midias img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+
+section#midias img:hover {
+    border: 1px solid rgba(255, 255, 255, 0.554);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.600);
+    transition: transform .3s, border .3s;
+
 }
