--- a/assets/estilo/midias.css
+++ b/assets/estilo/midias.css
@@ -21,9 +21,10 @@ a {
     color: white;
     margin-top: -3px;
     text-align: center;
-    padding: 20px;
+    padding: 15px;
     text-decoration: none;
     font-weight: bolder;
+    font-size: 14px;
 }
 
 a:hover {
